k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mibook.com
      http:
        paths:
          # Frontend service
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000

          # Auth service
          - path: /auth-api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 5000
          
          # Books service
          - path: /books-api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: books-service
                port:
                  number: 5001
